crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_exists_pattern_in_where.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (a) WHERE EXISTS((a)-->(:Movie)) RETURN a\")"
---
SOURCE_FILE@0..47
  STATEMENT@0..47
    MATCH_CLAUSE@0..38
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "a"
            R_PAREN@8..9 ")"
      WHERE_CLAUSE@9..38
        WHITESPACE@9..10 " "
        WHERE_KW@10..15 "WHERE"
        PATTERN_PREDICATE@15..38
          WHITESPACE@15..16 " "
          EXISTS_KW@16..22 "EXISTS"
          L_PAREN@22..23 "("
          PATTERN@23..37
            PATTERN_PART@23..37
              NODE_PATTERN@23..26
                L_PAREN@23..24 "("
                NAME@24..25
                  IDENT@24..25 "a"
                R_PAREN@25..26 ")"
              REL_PATTERN@26..29
                MINUS@26..27 "-"
                ARROW_R@27..29 "->"
              NODE_PATTERN@29..37
                L_PAREN@29..30 "("
                LABEL_EXPR@30..36
                  COLON@30..31 ":"
                  IDENT@31..36 "Movie"
                R_PAREN@36..37 ")"
          R_PAREN@37..38 ")"
    RETURN_CLAUSE@38..47
      WHITESPACE@38..39 " "
      RETURN_KW@39..45 "RETURN"
      RETURN_BODY@45..47
        RETURN_ITEMS@45..47
          RETURN_ITEM@45..47
            VAR_EXPR@45..47
              WHITESPACE@45..46 " "
              IDENT@46..47 "a"
