crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_exists_pattern_simple.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN EXISTS((a)-->(b))\")"
---
SOURCE_FILE@0..24
  STATEMENT@0..24
    RETURN_CLAUSE@0..24
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..24
        RETURN_ITEMS@6..24
          RETURN_ITEM@6..24
            PATTERN_PREDICATE@6..24
              WHITESPACE@6..7 " "
              EXISTS_KW@7..13 "EXISTS"
              L_PAREN@13..14 "("
              PATTERN@14..23
                PATTERN_PART@14..23
                  NODE_PATTERN@14..17
                    L_PAREN@14..15 "("
                    NAME@15..16
                      IDENT@15..16 "a"
                    R_PAREN@16..17 ")"
                  REL_PATTERN@17..20
                    MINUS@17..18 "-"
                    ARROW_R@18..20 "->"
                  NODE_PATTERN@20..23
                    L_PAREN@20..21 "("
                    NAME@21..22
                      IDENT@21..22 "b"
                    R_PAREN@22..23 ")"
              R_PAREN@23..24 ")"
