crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_function_call.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 271
expression: "format_with_errors(\"RETURN count(n)\")"
---
SOURCE_FILE@0..15
  STATEMENT@0..6
    RETURN_CLAUSE@0..6
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..6
        RETURN_ITEMS@6..6
          RETURN_ITEM@6..6
  ERROR@6..15
    WHITESPACE@6..7 " "
    COUNT_KW@7..12 "count"
    L_PAREN@12..13 "("
    IDENT@13..14 "n"
    R_PAREN@14..15 ")"
---errors---
@7: expected expression in RETURN item
@7: expected ';' or end of input
