crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_function_call_distinct.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 276
expression: "format_with_errors(\"MATCH (n) RETURN count(DISTINCT n)\")"
---
SOURCE_FILE@0..34
  STATEMENT@0..16
    MATCH_CLAUSE@0..9
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    RETURN_CLAUSE@9..16
      WHITESPACE@9..10 " "
      RETURN_KW@10..16 "RETURN"
      RETURN_BODY@16..16
        RETURN_ITEMS@16..16
          RETURN_ITEM@16..16
  ERROR@16..34
    WHITESPACE@16..17 " "
    COUNT_KW@17..22 "count"
    L_PAREN@22..23 "("
    DISTINCT_KW@23..31 "DISTINCT"
    WHITESPACE@31..32 " "
    IDENT@32..33 "n"
    R_PAREN@33..34 ")"
---errors---
@17: expected expression in RETURN item
@17: expected ';' or end of input
