crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_in_operator.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 354
expression: "format_with_errors(\"MATCH (n) WHERE n.age IN n.ages RETURN n\")"
---
SOURCE_FILE@0..40
  STATEMENT@0..40
    MATCH_CLAUSE@0..31
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
      WHERE_CLAUSE@9..31
        WHITESPACE@9..10 " "
        WHERE_KW@10..15 "WHERE"
        IN_EXPR@15..31
          PROP_ACCESS_EXPR@15..21
            VAR_EXPR@15..17
              WHITESPACE@15..16 " "
              IDENT@16..17 "n"
            DOT@17..18 "."
            IDENT@18..21 "age"
          WHITESPACE@21..22 " "
          IN_KW@22..24 "IN"
          PROP_ACCESS_EXPR@24..31
            VAR_EXPR@24..26
              WHITESPACE@24..25 " "
              IDENT@25..26 "n"
            DOT@26..27 "."
            IDENT@27..31 "ages"
    RETURN_CLAUSE@31..40
      WHITESPACE@31..32 " "
      RETURN_KW@32..38 "RETURN"
      RETURN_BODY@38..40
        RETURN_ITEMS@38..40
          RETURN_ITEM@38..40
            VAR_EXPR@38..40
              WHITESPACE@38..39 " "
              IDENT@39..40 "n"
